fix margin to gap in title and items

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  margin: 32px;
+  gap: 32px;
 }
 
 .plant-list {
